--- a/Chapter_4_Anaconda_Practice.ipynb
+++ b/Chapter_4_Anaconda_Practice.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "c2f7bbf7-210f-4012-9ccd-ea6cc4755226",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
        "4            6          1             0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "9a41f1af-9c4b-4e22-865d-1cdbcfe7572d",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "a79d8b14-4018-48ca-801c-bd7512340e57",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "68d8b996-d5bb-4869-9a16-acf89b24fada",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
       " 7   Start Day      5 non-null      int64  \n",
       " 8   New Customer   5 non-null      int64  \n",
       "dtypes: float64(1), int64(4), object(4)\n",
-      "memory usage: 492.0+ bytes\n"
+      "memory usage: 488.0+ bytes\n"
      ]
     }
    ],
@@ -594,9 +594,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "anaconda-panel-2023.05-py310",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-env-anaconda-panel-2023.05-py310-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -608,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
