--- a/Activity_5_Joshua_Correa_CIDM_5310.ipynb
+++ b/Activity_5_Joshua_Correa_CIDM_5310.ipynb
@@ -1173,7 +1173,9 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "# This is ready for grading."
+      ]
     }
   ],
   "metadata": {
